--- a/my-app/src/app/server/server.component.html
+++ b/my-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{serverId}} is {{getServerStatus()}}</p> <!--Interpolazione stringhe-->
+<p>Server with ID {{serverId}} is {{getServerStatus()}}</p> <!-- 2 Interpolazioni di stringhe, una legata ad una variabile e l'altra ad un metodo-->
