--- a/my-app/src/app/servers/servers.component.html
+++ b/my-app/src/app/servers/servers.component.html
@@ -1,5 +1,11 @@
 <h3>My Servers List:</h3>
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button> <!--Usando le quadre: propietà-->
+<label> Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)"><!-- $event => passa al typescript le info dell'evento  -->
+<input type="text" class="form-control" [(ngModel)]="serverName"> <!--Il valore nel campo viene trasferito alla variabile-->
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button> <!--Usando le quadre: propietà-->
+                                                                                 <!-- binding:collegamento tra disabled 
+                                                                                    e variabile-->
+<p>{{ serverCreationStatus }}</p>
 <hr>
 <app-server></app-server>
 <hr>
