--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -6,21 +6,21 @@
 -->
 
 <div class="container">
-    <!--
+
     <div class="row">
         <div class="col-xs-12">
             <h3>UTILIZZO DEI COMPONENTI: </h3>
-            <app-servers></app-servers>  Se lo creo come selettore HTML 
-            <div app-server></div> Se lo creo come attributo
-            <div class="app-servers"></div> Se lo creo come classe
+            <app-servers></app-servers> <!-- Se lo creo come selettore HTML -->
+            <!--<div app-server></div> Se lo creo come attributo
+            <div class="app-servers"></div> Se lo creo come classe-->
         </div>
     </div>
--->
 
-    <div class="row">
+
+    <!--<div class="row">
         <div class="col-xs-12">
             <h3>Esercitazione: Practising Databinding</h3>
             <app-practising-databinding></app-practising-databinding>
         </div>
-    </div>
+    </div>-->
 </div>
