--- a/my-app/src/app/servers/servers.component.html
+++ b/my-app/src/app/servers/servers.component.html
@@ -1,15 +1,19 @@
 <h3>My Servers List:</h3>
 <label> Server Name</label>
-<input type="text" class="form-control" (input)="onUpdateServerName($event)"><!-- $event => passa al typescript le info dell'evento  -->
-<input type="text" class="form-control" [(ngModel)]="serverName"> <!--Il valore nel campo viene trasferito alla variabile-->
+<!--[(ngModel)]="allowNewServer = serverName == '' ? true : false "-->
+<input type="text" class="form-control" [(ngModel)]="serverName" (ngModelChange)="allowNewServer = serverName == '' ? false : true"><!-- $event => passa al typescript le info dell'evento  -->
+<!--<input type="text" class="form-control" (input)="onUpdateServerName($event)"> Il valore nel campo viene trasferito alla variabile-->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button> <!--Usando le quadre: propietà-->
                                                                                  <!-- binding:collegamento tra disabled 
                                                                                     e variabile-->
-<p>{{ serverCreationStatus }}</p>
+<!--<p>{{ serverCreationStatus }}</p>-->
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p> <!--presenza del paragrafo in base al valore della booleana-->
+<!--<p *ngIf="!serverCreated">No server was created</p>-->
+<ng-template #noServer>
+   <p>No server was created</p>
+</ng-template>
 <hr>
-<app-server></app-server>
+<app-server *ngFor = "let item of servers; let i = index"
+   [ngStyle] = "{opacity: i > 1 ? 1 : 0.7}"></app-server>
 <hr>
-<app-server></app-server>
-<hr>
-<app-server></app-server>
 
